Set videos on tablets to 550px, instead of 100% to fix an iOS issue

--- a/_assets/scss/patterns/panel.scss
+++ b/_assets/scss/patterns/panel.scss
@@ -33,7 +33,7 @@
 
         video {
             width:  100%;
-            height: 100%;
+            height: 550px;
         }
 
         canvas {
